Started converting from OGRE to Horde3D.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,13 +1,13 @@
 # List project files
 set(CLIENT_HEADERS
 	cameranodeobject.h
-	ogreitem.h
+	h3ditem.h
    	${CMAKE_CURRENT_BINARY_DIR}/../config.h
 	)
 set(CLIENT_SOURCES
 	main.cpp
 	cameranodeobject.cpp
-	ogreitem.cpp
+	h3ditem.cpp
 	)
 
 include_directories(${CMAKE_CURRENT_BINARY_DIR}/..)
@@ -22,15 +22,14 @@ set_target_properties(PrecursorsClient PROPERTIES DEBUG_POSTFIX _d)
 
 # Tell CMake what to link with
 target_link_libraries(PrecursorsClient
+	Horde3D
+	Horde3DUtils
+
 	Qt5::Core
 	Qt5::Gui
 	Qt5::Qml
 	Qt5::Quick
 	Qt5::OpenGL
-
-	${OGRE_LIBRARIES}
-	${OGRE_RenderSystem_GL_LIBRARIES}
-	${OIS_LIBRARIES}
 
 	${OPENGL_gl_LIBRARY}
 
@@ -70,42 +69,6 @@ if(WIN32)
 
 	install(FILES ${CMAKE_SOURCE_DIR}/dist/bin/plugins_d.cfg
 		${CMAKE_SOURCE_DIR}/dist/bin/resources_d.cfg
-		DESTINATION bin
-		CONFIGURATIONS Debug
-		)
-
-	# NOTE: for the 1.7.1 sdk the OIS dll is called OIS.dll instead of libOIS.dll
-	# so you'll have to change that to make it work with 1.7.1
-	install(FILES ${OGRE_PLUGIN_DIR_REL}/OgreMain.dll
-		${OGRE_PLUGIN_DIR_REL}/RenderSystem_Direct3D9.dll
-		${OGRE_PLUGIN_DIR_REL}/RenderSystem_GL.dll
-		${OGRE_PLUGIN_DIR_REL}/libOIS.dll
-		DESTINATION bin
-		CONFIGURATIONS Release RelWithDebInfo
-		)
-
-	install(FILES ${OGRE_PLUGIN_DIR_DBG}/OgreMain_d.dll
-		${OGRE_PLUGIN_DIR_DBG}/RenderSystem_Direct3D9_d.dll
-		${OGRE_PLUGIN_DIR_DBG}/RenderSystem_GL_d.dll
-		${OGRE_PLUGIN_DIR_DBG}/libOIS_d.dll
-		DESTINATION bin
-		CONFIGURATIONS Debug
-		)
-
-	# as of sdk 1.7.2 we need to copy the boost dll's as well
-	# because they're not linked statically (it worked with 1.7.1 though)
-	install(FILES
-		${Boost_DATE_TIME_LIBRARY_RELEASE}
-		${Boost_THREAD_LIBRARY_RELEASE}
-		${Boost_SYSTEM_LIBRARY_RELEASE}
-		DESTINATION bin
-		CONFIGURATIONS Release RelWithDebInfo
-		)
-
-	install(FILES
-		${Boost_DATE_TIME_LIBRARY_DEBUG}
-		${Boost_THREAD_LIBRARY_DEBUG}
-		${Boost_SYSTEM_LIBRARY_DEBUG}
 		DESTINATION bin
 		CONFIGURATIONS Debug
 		)
