--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,12 +20,16 @@ set(CMAKE_DEBUG_POSTFIX "_d")
 set(CMAKE_INSTALL_PREFIX "${CMAKE_CURRENT_BINARY_DIR}/dist")
 
 
-# Find includes in corresponding build directories
-set(CMAKE_INCLUDE_CURRENT_DIR ON)
-
 # Instruct CMake to run moc automatically when needed.
 set(CMAKE_AUTOMOC ON)
 
+# Find includes in corresponding build directories
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
+
+include_directories(
+	/usr/local/include
+	/usr/include
+	)
 
 # Find the Qt modules
 find_package(Qt5Core REQUIRED)
