--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,12 +2,14 @@
 set(CLIENT_HEADERS
 	cameranodeobject.h
 	h3ditem.h
+	h3ditemanim.h
    	${CMAKE_CURRENT_BINARY_DIR}/../config.h
 	)
 set(CLIENT_SOURCES
 	main.cpp
 	cameranodeobject.cpp
 	h3ditem.cpp
+	h3ditemanim.cpp
 	)
 
 include_directories(${CMAKE_CURRENT_BINARY_DIR}/..)
