Added an initial logging class implementation.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,4 +66,5 @@ configure_file(
 
 ADD_SUBDIRECTORY(psettings psettings)
 ADD_SUBDIRECTORY(pchannels pchannels)
+ADD_SUBDIRECTORY(plogging plogging)
 ADD_SUBDIRECTORY(src src)
