added a utility class, PreUtil, which will hold random utilities we might need to use. For now, it has the code for getting the application version, as well as getting it in the list we need for networking. Also cleaned up includes across the project.

--- a/psettings/CMakeLists.txt
+++ b/psettings/CMakeLists.txt
@@ -16,6 +16,10 @@ add_library(PSettings SHARED
 set_target_properties(PSettings PROPERTIES COMPILE_FLAGS -fPIC)
 set_target_properties(PSettings PROPERTIES DEBUG_POSTFIX _d)
 
+include_directories(
+	${CMAKE_CURRENT_BINARY_DIR}/..
+)
+
 # Tell CMake what to link with
 target_link_libraries(PSettings
 	Qt5::Core
