--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -22,6 +22,7 @@ set(CLIENT_SOURCES
 
 include_directories(
 	${CMAKE_CURRENT_BINARY_DIR}/..
+	${CMAKE_CURRENT_SOURCE_DIR}/..
 	${Horde3D_INCLUDE_DIRS}
 	${OPENGL_INCLUDE_DIR}
 	)
