--- a/src/pchannels/CMakeLists.txt
+++ b/src/pchannels/CMakeLists.txt
@@ -26,8 +26,9 @@ set_target_properties(PChannels PROPERTIES DEBUG_POSTFIX _d)
 
 include_directories(
 	${CMAKE_CURRENT_BINARY_DIR}/..
+	${CMAKE_CURRENT_SOURCE_DIR}/..
 	${OPENSSL_INCLUDE_DIR}
-)
+	)
 
 # Tell CMake what to link with
 target_link_libraries(PChannels
