Added ois-ogre as a subrepo, and added it to the build system.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,6 +66,8 @@ configure_file(
 	)
 
 
+ADD_SUBDIRECTORY(deps/ois-ogre deps/ois-ogre)
+
 ADD_SUBDIRECTORY(src/plogging src/plogging)
 ADD_SUBDIRECTORY(src/preutil src/preutil)
 ADD_SUBDIRECTORY(src/psettings src/psettings)
