Added the 'controls' library to the build system.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,4 +72,5 @@ ADD_SUBDIRECTORY(src/plogging src/plogging)
 ADD_SUBDIRECTORY(src/preutil src/preutil)
 ADD_SUBDIRECTORY(src/psettings src/psettings)
 ADD_SUBDIRECTORY(src/pchannels src/pchannels)
+ADD_SUBDIRECTORY(src/controls src/controls)
 ADD_SUBDIRECTORY(src/client src/client)
