--- a/resources/default.config.json
+++ b/resources/default.config.json
@@ -75,6 +75,11 @@
                                 "changeRate": -0.3,
                                 "slot": "throttle"
                             },
+                            "Wheel X": {
+                                "delta": true,
+                                "sensitivity": 10,
+                                "slot": "cameraZoom"
+                            },
                             "X": {
                                 "sensitivity": -10,
                                 "slot": "heading"
